--- a/07-10-2016/stomach_ache_journey/index_9.html
+++ b/07-10-2016/stomach_ache_journey/index_9.html
@@ -122,13 +122,16 @@
       <li><a href="//www.nhs.uk/conditions/Constipation/Pages/Introduction.aspx">constipation</a> (can’t poo)</li>
     </ul>
 
-      <a href="find_a_place_that_can_help.html" class="button cta-black-arrow cta-white">Find an open pharmacy</a>
+      <a href="find_a_pharmacy.html" class="button cta-black-arrow cta-white">Find an open pharmacy</a>
 
   <p>If you have vomiting and diarrhoea with your stomach ache, it should stop after a few days. Try to drink a lot of fluids to avoid dehydration.</p>
 
   <p>Painkillers like paracetamol can help with your stomach ache but won’t stop any vomiting and diarrhoea. Find out more about <a href="http://www.nhs.uk/conditions/gastroenteritis/Pages/Introduction.aspx">treating vomiting and diarrhoea</a>.</p>
 
-  <h2>If the symptoms persist or get worse</h2>
+  <section class="callout callout__info">
+
+    <h2>If the symptoms persist or get worse</h2>
+
 
   <p>Seek a doctor's advice if:</p>
 
@@ -143,13 +146,11 @@
   <li>your diarrhoea lasts longer than a few days</li>
 </ul>
 
-<p>
-  <strong>Visit your GP</strong> or <strong>use NHS 111</strong></a>
+<p class="seek__advice__alert">
+  <strong>Visit your GP</strong> – or <strong>use NHS 111</strong></a> if you can’t speak to your GP or don’t know what to do next
 </p>
-<p></p>
-<p>Not registered with a GP? Need to find one? <a href="//www.nhs.uk/Service-Search/GP/LocationSearch/4">Find one</a>.</p>
 
-
+    </section>
 
 
 </div>
