--- a/10-10-2016/stomach_ache_journey/results_2.html
+++ b/10-10-2016/stomach_ache_journey/results_2.html
@@ -114,7 +114,7 @@
 
                   <nav class="tabbed-nav">
 
-                       <a class="tabbed-tab active" href="#" id="open-only-tab-control" tab="#opentab">Pharmacies open now</a>
+                       <a class="tabbed-tab active" href="#" id="open-only-tab-control" tab="#opentab">Open now</a>
                        <a class="tabbed-tab" href="#" id="open-and-closed-tab-control" tab="#openandclosedtab">All pharmacies</a>
 
                    </nav>
@@ -124,8 +124,8 @@
       <div id="categories" class="tabbed-element opentab">
       <div class="grid-row">
 
+        <div class="reading-row">
 
-        <div class="column__one-half">
           <h2>Idle Pharmacy</h2>
 
           <p><strong>Open today until 5.45pm</strong></p>
@@ -136,12 +136,10 @@
             BD10 9PT</p>
 
             <p>Telephone: 01274 617711</p>
-          </div>
-
-          <div class="column__one-half">
             <p>0.3 miles away</p>
 
             <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
+
           </div>
 
         </div>
@@ -149,8 +147,8 @@
         <hr>
 
         <div class="grid-row">
+          <div class="reading-row">
 
-          <div class="column__one-half">
             <h2>Idle Pharmacy</h2>
 
             <p><strong>Open today until 5.45pm</strong></p>
@@ -161,12 +159,9 @@
               BD10 9PT</p>
 
               <p>Telephone: 01274 617711</p>
-            </div>
+              <p>0.7 miles away<br />
+                <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a></p>
 
-            <div class="column__one-half">
-              <p>0.7 miles away</p>
-
-              <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
             </div>
 
           </div>
@@ -175,7 +170,9 @@
 
         <div class="grid-row">
 
-          <div class="column__one-half">
+          <div class="reading-row">
+
+
             <h2>Idle Pharmacy</h2>
 
             <p><strong>Open today until 5.45pm</strong></p>
@@ -186,12 +183,10 @@
               BD10 9PT</p>
 
               <p>Telephone: 01274 617711</p>
-            </div>
-
-            <div class="column__one-half">
               <p>1.4 miles away</p>
 
               <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
+
             </div>
 
           </div>
