--- a/10-10-2016/stomach_ache_journey/cannot_travel.html
+++ b/10-10-2016/stomach_ache_journey/cannot_travel.html
@@ -13,7 +13,7 @@
 <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 192x192 pixels in size. -->
 <link rel="icon" href="/public/images/favicon.png">
 
-<title>Pharmacies near BD10 9RY for stomach ache help</title>
+<title>Cannot travel</title>
 
 
 <meta property="og:image" content="/public/images/opengraph-image.png">
@@ -33,7 +33,6 @@
   <script src="/public/javascripts/ie.bundle.js" type="text/javascript"></script>
 <![endif]-->
 
-<script async src="/public/javascripts/picturefill.bundle.js" type="text/javascript"></script>
 
   </head>
 
@@ -84,124 +83,31 @@
 
     </header>
 
-    <main id="content" role="main" tabindex="-1">
+    <main id="content" role="main" class="content" tabindex="-1">
 
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">Pharmacies that can help you near BD10 9RY</h1>
+        <h1 class="local-header--title--question">You cannot travel to a pharmacy</h1>
       </div>
     </div>
 
 
 
     <div class="page-section">
-      <div class="grid-row">
+      <div class="reading-width">
 
-        <div class="column__one-quarter">
-          <div class="reading-width">
-            <p class="lede">These pharmacies can help you with
-              <ul>
-                <li>thing one</li>
-                <li>thing two</li>
-                <li>thing three</li>
-              </ul>
-            </p>
-          </div>
-        </div>
+        <p>You have said you cannot travel to a pharmacy.</p>
 
-        <div class="column__three-quarters">
-
-                  <nav class="tabbed-nav">
-
-                       <a class="tabbed-tab active" href="#" id="open-only-tab-control" tab="#opentab">Pharmacies open now</a>
-                       <a class="tabbed-tab" href="#" id="open-and-closed-tab-control" tab="#openandclosedtab">All pharmacies</a>
-
-                   </nav>
-
-      <div class="tabbed-content active">
-
-      <div id="categories" class="tabbed-element opentab">
-      <div class="grid-row">
+        <p>Your nearby pharamcies could still be able to help you by a telephone call.</p>
 
 
-        <div class="column__one-half">
-          <h2>Idle Pharmacy</h2>
-
-          <p><strong>Open today until 5.45pm</strong></p>
-
-          <p>7 The Green,<br />
-            Idle, <br />
-            Bradford,<br />
-            BD10 9PT</p>
-
-            <p>Telephone: 01274 617711</p>
-          </div>
-
-          <div class="column__one-half">
-            <p>0.3 miles away</p>
-
-            <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
-          </div>
+        <p><a class="button" href="enter_your_location.html">Continue</a></p>
 
         </div>
-
-        <hr>
-
-        <div class="grid-row">
-
-          <div class="column__one-half">
-            <h2>Idle Pharmacy</h2>
-
-            <p><strong>Open today until 5.45pm</strong></p>
-
-            <p>7 The Green,<br />
-              Idle, <br />
-              Bradford,<br />
-              BD10 9PT</p>
-
-              <p>Telephone: 01274 617711</p>
-            </div>
-
-            <div class="column__one-half">
-              <p>0.7 miles away</p>
-
-              <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
-            </div>
-
-          </div>
-
-        <hr>
-
-        <div class="grid-row">
-
-          <div class="column__one-half">
-            <h2>Idle Pharmacy</h2>
-
-            <p><strong>Open today until 5.45pm</strong></p>
-
-            <p>7 The Green,<br />
-              Idle, <br />
-              Bradford,<br />
-              BD10 9PT</p>
-
-              <p>Telephone: 01274 617711</p>
-            </div>
-
-            <div class="column__one-half">
-              <p>1.4 miles away</p>
-
-              <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
-            </div>
-
-          </div>
-
-      </div>
-      </div>
-
     </div>
-    </div>
-    </div>
+
+
     </main>
 
 
@@ -227,6 +133,9 @@
         </div>
 
     </footer>
+
+    <script src="scripts/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script src="scripts/selection-buttons.js" type="text/javascript"></script>
 
 
   </body>
