--- a/10-10-2016/stomach_ache_journey/index.html
+++ b/10-10-2016/stomach_ache_journey/index.html
@@ -122,14 +122,13 @@
       <li><a href="//www.nhs.uk/conditions/Constipation/Pages/Introduction.aspx">constipation</a> (can’t poo)</li>
     </ul>
 
-      <a href="find_a_place_that_can_help.html" class="button cta-black-arrow cta-white">Find an open pharmacy</a>
+      <a href="find_a_place_that_can_help.html" class="button cta cta-green">Find an open pharmacy</a>
 
   <p>If you have vomiting and diarrhoea with your stomach ache, it should stop after a few days. Try to drink a lot of fluids to avoid dehydration.</p>
 
   <p>Painkillers like paracetamol can help with your stomach ache but won’t stop any vomiting and diarrhoea. Find out more about <a href="http://www.nhs.uk/conditions/gastroenteritis/Pages/Introduction.aspx">treating vomiting and diarrhoea</a>.</p>
 
   <h2>If the symptoms persist or get worse</h2>
-
 
   <p>Seek a doctor's advice if:</p>
 
@@ -149,6 +148,8 @@
 </p>
 <p></p>
 <p>Not registered with a GP? Need to find one? <a href="//www.nhs.uk/Service-Search/GP/LocationSearch/4">Find one</a>.</p>
+
+
 
 
 </div>
