--- a/10-10-2016/stomach_ache_journey/list-of-pages.html
+++ b/10-10-2016/stomach_ache_journey/list-of-pages.html
@@ -13,7 +13,7 @@
 <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 192x192 pixels in size. -->
 <link rel="icon" href="/public/images/favicon.png">
 
-<title>Pharmacies near BD10 9RY for stomach ache help</title>
+<title>Enter your location</title>
 
 
 <meta property="og:image" content="/public/images/opengraph-image.png">
@@ -89,119 +89,30 @@
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">Pharmacies that can help you near BD10 9RY</h1>
+
+        <h1 class="local-header--title--question">Pages for stomach ache journey</h1>
       </div>
     </div>
 
 
 
     <div class="page-section">
-      <div class="grid-row">
+      <div class="reading-width">
 
-        <div class="column__one-quarter">
-          <div class="reading-width">
-            <p class="lede">These pharmacies can help you with
-              <ul>
-                <li>thing one</li>
-                <li>thing two</li>
-                <li>thing three</li>
-              </ul>
-            </p>
-          </div>
-        </div>
+          <ul>
+            <li><a href="index.html">Stomach ache page</a></li>
+            <li><a href="find_a_place_that_can_help.html">Find a place that can help</a></li>
+            <li><a href="enter_your_location.html">Enter your location</a></li>
+            <li><a href="enter_your_location_error.html">Enter you location error</a></li>
+            <li><a href="cannot_travel.html">Cannot travel</a></li>
+            <li><a href="results.html">Results page</a></li>
 
-        <div class="column__three-quarters">
-
-                  <nav class="tabbed-nav">
-
-                       <a class="tabbed-tab active" href="#" id="open-only-tab-control" tab="#opentab">Pharmacies open now</a>
-                       <a class="tabbed-tab" href="#" id="open-and-closed-tab-control" tab="#openandclosedtab">All pharmacies</a>
-
-                   </nav>
-
-      <div class="tabbed-content active">
-
-      <div id="categories" class="tabbed-element opentab">
-      <div class="grid-row">
-
-
-        <div class="column__one-half">
-          <h2>Idle Pharmacy</h2>
-
-          <p><strong>Open today until 5.45pm</strong></p>
-
-          <p>7 The Green,<br />
-            Idle, <br />
-            Bradford,<br />
-            BD10 9PT</p>
-
-            <p>Telephone: 01274 617711</p>
-          </div>
-
-          <div class="column__one-half">
-            <p>0.3 miles away</p>
-
-            <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
-          </div>
+          </ul>
 
         </div>
-
-        <hr>
-
-        <div class="grid-row">
-
-          <div class="column__one-half">
-            <h2>Idle Pharmacy</h2>
-
-            <p><strong>Open today until 5.45pm</strong></p>
-
-            <p>7 The Green,<br />
-              Idle, <br />
-              Bradford,<br />
-              BD10 9PT</p>
-
-              <p>Telephone: 01274 617711</p>
-            </div>
-
-            <div class="column__one-half">
-              <p>0.7 miles away</p>
-
-              <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
-            </div>
-
-          </div>
-
-        <hr>
-
-        <div class="grid-row">
-
-          <div class="column__one-half">
-            <h2>Idle Pharmacy</h2>
-
-            <p><strong>Open today until 5.45pm</strong></p>
-
-            <p>7 The Green,<br />
-              Idle, <br />
-              Bradford,<br />
-              BD10 9PT</p>
-
-              <p>Telephone: 01274 617711</p>
-            </div>
-
-            <div class="column__one-half">
-              <p>1.4 miles away</p>
-
-              <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
-            </div>
-
-          </div>
-
-      </div>
-      </div>
-
     </div>
-    </div>
-    </div>
+
+
     </main>
 
 
@@ -227,6 +138,9 @@
         </div>
 
     </footer>
+
+    <script src="scripts/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script src="scripts/selection-buttons.js" type="text/javascript"></script>
 
 
   </body>
