Content updates to symptoms page

--- a/14-10-2016/stomach_ache_journey/404.html
+++ b/14-10-2016/stomach_ache_journey/404.html
@@ -89,8 +89,7 @@
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">This page cannot be found</h1>
-        <a href="index_11.html" class="link-back">Back</a>
+        <h1 class="local-header--title--question">Page not found</h1>
 
       </div>
     </div>
@@ -100,10 +99,10 @@
     <div class="page-section">
       <div class="reading-width">
 
-        <p>
-        Check that you have entered the correct web address, or try the <a href="//nhs.uk/">NHS.UK home page</a>.
+        <p>If you have entered a web address check it was correct. You can <a href="//nhs.uk/">browse from the NHS.UK home page</a>.</p>
 
-        </p>
+        <p><a href="javscript:history.go(-1)" class="link-back">Back</a></p>
+
 
 
         </div>
