--- a/14-10-2016/stomach_ache_journey/500etc.html
+++ b/14-10-2016/stomach_ache_journey/500etc.html
@@ -89,9 +89,7 @@
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">This page cannot be found</h1>
-        <a href="index_11.html" class="link-back">Back</a>
-
+        <h1 class="local-header--title--question">Sorry, we are experiencing technical problems.</h1>
       </div>
     </div>
 
@@ -101,7 +99,7 @@
       <div class="reading-width">
 
         <p>
-        Check that you have entered the correct web address, or try the <a href="//nhs.uk/">NHS.UK home page</a>.
+        Please try again later. [If we know how long the service will be down we should say.]
 
         </p>
 
