--- a/14-10-2016/stomach_ache_journey/find_a_pharmacy.html
+++ b/14-10-2016/stomach_ache_journey/find_a_pharmacy.html
@@ -89,9 +89,10 @@
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">This page cannot be found</h1>
         <a href="index_11.html" class="link-back">Back</a>
 
+        <h1 class="local-header--title--question">Find a pharmacy</h1>
+        
       </div>
     </div>
 
@@ -100,12 +101,43 @@
     <div class="page-section">
       <div class="reading-width">
 
-        <p>
-        Check that you have entered the correct web address, or try the <a href="//nhs.uk/">NHS.UK home page</a>.
-
-        </p>
 
 
+        <p>For help with:</p>
+
+
+        <ul>
+          <li>feeling bloated (trapped wind)</li>
+          <li>indigestion (burning pain or discomfort after eating)</li>
+          <li>constipation (can’t poo)</li>
+          <li>pain relief</li>
+        </ul>
+
+
+        <form class="form" id="formname">
+
+
+          <div class="form-group">
+          <fieldset>
+            <legend>
+
+              <span class="form-label-bold">
+                Enter a postcode
+              </span>
+
+            </legend>
+
+
+            <div class="form-group">
+              <input type="text" class="form-control" name="example-input-0" id="example-input-0" value="">
+            </div>
+          </fieldset>
+          </div>
+
+                <input type="submit" class="button" value="Continue">
+
+
+          </form>
         </div>
     </div>
 
