--- a/14-10-2016/stomach_ache_journey/list-of-pages.html
+++ b/14-10-2016/stomach_ache_journey/list-of-pages.html
@@ -89,9 +89,8 @@
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">This page cannot be found</h1>
-        <a href="index_11.html" class="link-back">Back</a>
 
+        <h1 class="local-header--title--question">Pages for stomach ache journey</h1>
       </div>
     </div>
 
@@ -100,14 +99,19 @@
     <div class="page-section">
       <div class="reading-width">
 
-        <p>
-        Check that you have entered the correct web address, or try the <a href="//nhs.uk/">NHS.UK home page</a>.
+          <ul>
+            <li><a href="index.html">Stomach ache page</a></li>
+            <li><a href="find_a_place_that_can_help.html">Find a place that can help</a></li>
+            <li><a href="enter_your_location.html">Enter your location</a></li>
+            <li><a href="enter_your_location_error.html">Enter you location error</a></li>
+            <li><a href="cannot_travel.html">Cannot travel</a></li>
+            <li><a href="results.html">Results page</a></li>
 
-        </p>
-
+          </ul>
 
         </div>
     </div>
+
 
     </main>
 
