--- a/14-10-2016/stomach_ache_journey/cannot_travel.html
+++ b/14-10-2016/stomach_ache_journey/cannot_travel.html
@@ -13,7 +13,7 @@
 <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 192x192 pixels in size. -->
 <link rel="icon" href="/public/images/favicon.png">
 
-<title>Enter your location</title>
+<title>Cannot travel</title>
 
 
 <meta property="og:image" content="/public/images/opengraph-image.png">
@@ -33,7 +33,6 @@
   <script src="/public/javascripts/ie.bundle.js" type="text/javascript"></script>
 <![endif]-->
 
-<script async src="/public/javascripts/picturefill.bundle.js" type="text/javascript"></script>
 
   </head>
 
@@ -84,14 +83,12 @@
 
     </header>
 
-    <main id="content" role="main" tabindex="-1">
+    <main id="content" role="main" class="content" tabindex="-1">
 
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">This page cannot be found</h1>
-        <a href="index_11.html" class="link-back">Back</a>
-
+        <h1 class="local-header--title--question">You cannot travel to a pharmacy</h1>
       </div>
     </div>
 
@@ -100,14 +97,16 @@
     <div class="page-section">
       <div class="reading-width">
 
-        <p>
-        Check that you have entered the correct web address, or try the <a href="//nhs.uk/">NHS.UK home page</a>.
+        <p>You have said you cannot travel to a pharmacy.</p>
 
-        </p>
+        <p>Your nearby pharamcies could still be able to help you by a telephone call.</p>
 
+
+        <p><a class="button" href="enter_your_location.html">Continue</a></p>
 
         </div>
     </div>
+
 
     </main>
 
