--- a/14-10-2016/stomach_ache_journey/find_a_place_that_can_help.html
+++ b/14-10-2016/stomach_ache_journey/find_a_place_that_can_help.html
@@ -13,7 +13,7 @@
 <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 192x192 pixels in size. -->
 <link rel="icon" href="/public/images/favicon.png">
 
-<title>Enter your location</title>
+<title>Find a place that can help you</title>
 
 
 <meta property="og:image" content="/public/images/opengraph-image.png">
@@ -33,7 +33,6 @@
   <script src="/public/javascripts/ie.bundle.js" type="text/javascript"></script>
 <![endif]-->
 
-<script async src="/public/javascripts/picturefill.bundle.js" type="text/javascript"></script>
 
   </head>
 
@@ -84,14 +83,12 @@
 
     </header>
 
-    <main id="content" role="main" tabindex="-1">
+    <main id="content" role="main" class="content" tabindex="-1">
 
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">This page cannot be found</h1>
-        <a href="index_11.html" class="link-back">Back</a>
-
+        <h1 class="local-header--title--question">Find a place that can help you</h1>
       </div>
     </div>
 
@@ -100,14 +97,50 @@
     <div class="page-section">
       <div class="reading-width">
 
-        <p>
-        Check that you have entered the correct web address, or try the <a href="//nhs.uk/">NHS.UK home page</a>.
-
-        </p>
+        <p>We’ll find open pharmacies near to you that can help with:</p>
 
 
+        <ul>
+          <li>feeling bloated (trapped wind)</li>
+          <li>indigestion (burning pain or discomfort after eating)</li>
+          <li>constipation (can’t poo)</li>
+          <li>pain relief</li>
+        </ul>
+
+        <form class="form" id="formname">
+
+
+
+
+<!-- start of the test code -->
+
+            <fieldset>
+              <legend class="primary">Can you travel to a pharmacist?</legend>
+              <div class="form-group">
+                <label for="radio-1" class="block-label">
+                  <input id="radio-1" type="radio" name="radio-group" value="radio-1" onclick="document.getElementById('formname').action='enter_your_location.html';document.getElementById('submit')">
+                  Yes
+                </label>
+                <label for="radio-2" class="block-label">
+                  <input id="radio-2" type="radio" name="radio-group" value="radio-2" onclick="document.getElementById('formname').action='cannot_travel.html';document.getElementById('submit')">
+                  No
+                </label>
+              </div>
+            </fieldset>
+
+<!-- end of the test code -->
+
+
+                <input type="submit" class="button" value="Continue">
+
+
+            <p></p>
+            <p>If you are not looking for help, <a href="index.html">go back</a>.</p>
+
+          </form>
         </div>
     </div>
+
 
     </main>
 
