--- a/14-10-2016/stomach_ache_journey/results_2.html
+++ b/14-10-2016/stomach_ache_journey/results_2.html
@@ -13,7 +13,7 @@
 <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 192x192 pixels in size. -->
 <link rel="icon" href="/public/images/favicon.png">
 
-<title>Enter your location</title>
+<title>Pharmacies near BD10 9RY for stomach ache help</title>
 
 
 <meta property="og:image" content="/public/images/opengraph-image.png">
@@ -89,26 +89,114 @@
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">This page cannot be found</h1>
-        <a href="index_11.html" class="link-back">Back</a>
-
+        <h1 class="local-header--title--question">Pharmacies that can help you near BD10 9RY</h1>
       </div>
     </div>
 
 
 
     <div class="page-section">
-      <div class="reading-width">
+      <div class="grid-row">
 
-        <p>
-        Check that you have entered the correct web address, or try the <a href="//nhs.uk/">NHS.UK home page</a>.
+        <div class="column__one-quarter">
+          <div class="reading-width">
+            <p class="lede">These pharmacies can help you with
+              <ul>
+                <li>thing one</li>
+                <li>thing two</li>
+                <li>thing three</li>
+              </ul>
+            </p>
+          </div>
+        </div>
 
-        </p>
+        <div class="column__three-quarters">
 
+                  <nav class="tabbed-nav">
+
+                       <a class="tabbed-tab active" href="#" id="open-only-tab-control" tab="#opentab">Open now</a>
+                       <a class="tabbed-tab" href="#" id="open-and-closed-tab-control" tab="#openandclosedtab">All pharmacies</a>
+
+                   </nav>
+
+      <div class="tabbed-content active">
+
+      <div id="categories" class="tabbed-element opentab">
+      <div class="grid-row">
+
+        <div class="reading-row">
+
+          <h2>Idle Pharmacy</h2>
+
+          <p><strong>Open today until 5.45pm</strong></p>
+
+          <p>7 The Green,<br />
+            Idle, <br />
+            Bradford,<br />
+            BD10 9PT</p>
+
+            <p>Telephone: 01274 617711</p>
+            <p>0.3 miles away</p>
+
+            <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
+
+          </div>
 
         </div>
-    </div>
 
+        <hr>
+
+        <div class="grid-row">
+          <div class="reading-row">
+
+            <h2>Idle Pharmacy</h2>
+
+            <p><strong>Open today until 5.45pm</strong></p>
+
+            <p>7 The Green,<br />
+              Idle, <br />
+              Bradford,<br />
+              BD10 9PT</p>
+
+              <p>Telephone: 01274 617711</p>
+              <p>0.7 miles away<br />
+                <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a></p>
+
+            </div>
+
+          </div>
+
+        <hr>
+
+        <div class="grid-row">
+
+          <div class="reading-row">
+
+
+            <h2>Idle Pharmacy</h2>
+
+            <p><strong>Open today until 5.45pm</strong></p>
+
+            <p>7 The Green,<br />
+              Idle, <br />
+              Bradford,<br />
+              BD10 9PT</p>
+
+              <p>Telephone: 01274 617711</p>
+              <p>1.4 miles away</p>
+
+              <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
+
+            </div>
+
+          </div>
+
+      </div>
+      </div>
+
+    </div>
+    </div>
+    </div>
     </main>
 
 
@@ -134,9 +222,6 @@
         </div>
 
     </footer>
-
-    <script src="scripts/jquery-1.12.4.min.js" type="text/javascript"></script>
-    <script src="scripts/selection-buttons.js" type="text/javascript"></script>
 
 
   </body>
