Find a pharmacy form page

--- a/14-10-2016/stomach_ache_journey/find_a_pharmacy.html
+++ b/14-10-2016/stomach_ache_journey/find_a_pharmacy.html
@@ -89,10 +89,9 @@
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <a href="index_11.html" class="link-back">Back</a>
 
         <h1 class="local-header--title--question">Find a pharmacy</h1>
-        
+
       </div>
     </div>
 
@@ -116,26 +115,21 @@
 
         <form class="form" id="formname">
 
+        <fieldset>
 
           <div class="form-group">
-          <fieldset>
             <legend>
-
               <span class="form-label-bold">
                 Enter a postcode
               </span>
-
             </legend>
 
-
-            <div class="form-group">
               <input type="text" class="form-control" name="example-input-0" id="example-input-0" value="">
             </div>
           </fieldset>
-          </div>
 
-                <input type="submit" class="button" value="Continue">
-
+                <input type="submit" class="button" value="Continue"><br />
+                <a href="index_11.html" class="link-back">Back</a>
 
           </form>
         </div>
