--- a/14-10-2016/stomach_ache_journey/500etc.html
+++ b/14-10-2016/stomach_ache_journey/500etc.html
@@ -99,7 +99,7 @@
       <div class="reading-width">
 
         <p>
-        Please try again later. [If we know how long the service will be down we should say.]
+        Please try again later.
 
         </p>
 
