--- a/14-10-2016/stomach_ache_journey/find_a_pharmacy_no_condition.html
+++ b/14-10-2016/stomach_ache_journey/find_a_pharmacy_no_condition.html
@@ -59,11 +59,11 @@
 
 <div class="notification-banner notification-banner__hiviz js-feedback-banner">
   <p class="notification-banner--inner">
-    This is a new service we are working on.
+    This is a new service.
 
+      Go
 
-
-    <a href="http://www.nhs.uk/">Go to NHS Choices.</a>
+    <a href="http://www.nhs.uk/">back to NHS Choices.</a>
   </p>
 </div>
 
@@ -89,7 +89,8 @@
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">Page not found</h1>
+
+        <h1 class="local-header--title--question">Find a pharmacy near a location</h1>
 
       </div>
     </div>
@@ -99,12 +100,40 @@
     <div class="page-section">
       <div class="reading-width">
 
-        <p>If you have entered a web address check it was correct. You can <a href="//nhs.uk/">browse from the NHS.UK home page</a>.</p>
 
-        <p><a href="javscript:history.go(-1)" class="link-back">Back</a></p>
+<!--
+
+        <p>For help with:</p>
 
 
+        <ul>
+          <li>feeling bloated (trapped wind)</li>
+          <li>indigestion (burning pain or discomfort after eating)</li>
+          <li>constipation (can’t poo)</li>
+          <li>pain relief</li>
+        </ul>
 
+-->
+
+        <form class="form" id="formname">
+
+        <fieldset>
+
+          <div class="form-group">
+            <legend>
+              <span class="form-label-bold">
+                Enter a postcode
+              </span>
+            </legend>
+
+              <input type="text" class="form-control" name="example-input-0" id="example-input-0" value="">
+            </div>
+          </fieldset>
+
+                <input type="submit" class="button" value="Continue"><br />
+                <a href="index_11.html" class="link-back">Back</a>
+
+          </form>
         </div>
     </div>
 
