--- a/14-10-2016/stomach_ache_journey/results_no_condition.html
+++ b/14-10-2016/stomach_ache_journey/results_no_condition.html
@@ -13,7 +13,7 @@
 <!-- Firefox, Chrome, Safari, IE 11+ and Opera. 192x192 pixels in size. -->
 <link rel="icon" href="/public/images/favicon.png">
 
-<title>Enter your location</title>
+<title>Pharmacies near BD10 9RY for stomach ache help</title>
 
 
 <meta property="og:image" content="/public/images/opengraph-image.png">
@@ -59,11 +59,11 @@
 
 <div class="notification-banner notification-banner__hiviz js-feedback-banner">
   <p class="notification-banner--inner">
-    This is a new service we are working on.
+    This is a new service.
 
+      Go
 
-
-    <a href="http://www.nhs.uk/">Go to NHS Choices.</a>
+    <a href="http://www.nhs.uk/">back to NHS Choices.</a>
   </p>
 </div>
 
@@ -89,25 +89,105 @@
 
     <div class="local-header-white-bg">
       <div class="local-header--question">
-        <h1 class="local-header--title--question">Page not found</h1>
-
+        <h1 class="local-header--title--question">Pharmacies near BD10 9RY</h1>
       </div>
     </div>
 
 
 
     <div class="page-section">
-      <div class="reading-width">
-
-        <p>If you have entered a web address check it was correct. You can <a href="//nhs.uk/">browse from the NHS.UK home page</a>.</p>
-
-        <p><a href="javscript:history.go(-1)" class="link-back">Back</a></p>
+      <div class="grid-row">
 
 
+                  <nav class="tabbed-nav">
+
+                       <a class="tabbed-tab active" href="#" id="open-only-tab-control" tab="#opentab">Pharmacies open now</a>
+                       <a class="tabbed-tab" href="#" id="open-and-closed-tab-control" tab="#openandclosedtab">All pharmacies</a>
+
+                   </nav>
+
+      <div class="tabbed-content active">
+
+      <div id="categories" class="tabbed-element opentab">
+      <div class="grid-row">
+
+
+        <div class="column__one-half">
+          <h2>Idle Pharmacy</h2>
+
+          <p><strong>Open today until 5.45pm</strong></p>
+
+          <p>7 The Green,<br />
+            Idle, <br />
+            Bradford,<br />
+            BD10 9PT</p>
+
+            <p>Telephone: 01274 617711</p>
+          </div>
+
+          <div class="column__one-half">
+            <p>0.3 miles away</p>
+
+            <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
+          </div>
 
         </div>
-    </div>
 
+        <hr>
+
+        <div class="grid-row">
+
+          <div class="column__one-half">
+            <h2>Idle Pharmacy</h2>
+
+            <p><strong>Open today until 5.45pm</strong></p>
+
+            <p>7 The Green,<br />
+              Idle, <br />
+              Bradford,<br />
+              BD10 9PT</p>
+
+              <p>Telephone: 01274 617711</p>
+            </div>
+
+            <div class="column__one-half">
+              <p>0.7 miles away</p>
+
+              <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
+            </div>
+
+          </div>
+
+        <hr>
+
+        <div class="grid-row">
+
+          <div class="column__one-half">
+            <h2>Idle Pharmacy</h2>
+
+            <p><strong>Open today until 5.45pm</strong></p>
+
+            <p>7 The Green,<br />
+              Idle, <br />
+              Bradford,<br />
+              BD10 9PT</p>
+
+              <p>Telephone: 01274 617711</p>
+            </div>
+
+            <div class="column__one-half">
+              <p>1.4 miles away</p>
+
+              <a href="GOOGLE_MAP_PAGE" class="button cta cta-blue">See on map and get directions</a>
+            </div>
+
+          </div>
+
+      </div>
+      </div>
+
+    </div>
+    </div>
     </main>
 
 
@@ -133,9 +213,6 @@
         </div>
 
     </footer>
-
-    <script src="scripts/jquery-1.12.4.min.js" type="text/javascript"></script>
-    <script src="scripts/selection-buttons.js" type="text/javascript"></script>
 
 
   </body>
